with Ken's comments
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@6970 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/3papers/combined/combined_epl.tex
+++ b/2012/3papers/combined/combined_epl.tex
@@ -1,6 +1,6 @@
 \documentclass[doublecol]{epl/epl2} 
 
-\title{Luminosity independent measurements of total, elastic and inelastic cross-sections at $\sqrt{s}$ = 7\,TeV}
+\title{Luminosity-independent measurements of total, elastic and inelastic cross-sections at $\sqrt{s}$ = 7\,TeV}
 %\shorttitle{Title} %Insert here a short version of the title if it exceeds 70 characters
 
 \author{
@@ -111,14 +111,14 @@ G.~Antchev\thanksInst{1}
 %
 \def\year{2012}
 \vskip\baselineskip
-\centerline{***** DRAFT FROM \today{} *****}
+\centerline{\vbox{\hrule\hbox{\vrule\vrule width0pt depth10pt height15pt\qquad DRAFT FROM \today{}\qquad\vrule}\hrule}}
 }
 
 \pacs{13.60.Hb}{Total and inclusive cross sections (including deep-inelastic processes)}
 
 
 \abstract{%
-The TOTEM experiment at the LHC has performed the first luminosity-independent determination of the total proton-proton cross-section at $\sqrt{s} = 7\un{TeV}$. This technique is based on the optical theorem and requires simultaneous measurements of the inelastic rate -- accomplished with the forward telescopes T1 and T2 in the range $5.3 < |\eta| < 6.4$ -- and of the elastic rate by detecting the outcoming protons with Roman Pot detectors. The data presented here were collected in a dedicated run in 2011 with special beam optics ($\beta^{*} = 90\un{m}$) and Roman Pots approaching the beam close enough to register elastic events with squared four-momentum transfers $|t|$ as low as $5 \cdot 10^{-3}\,\un{GeV^{2}}$. The luminosity-independent results for the elastic, inelastic and total cross-sections are $\sigma_{\rm el} = (25.1\pm 1.1)\un{mb}$, $\sigma_{\rm inel} = (72.9\pm 1.5)\un{mb}$ and $\sigma_{\rm tot} = (98.0\pm 2.5)\un{mb}$, respectively. At the same time this method delivers the integrated luminosity, in agreement with measurements by CMS.\\
+The TOTEM experiment at the LHC has performed the first luminosity-independent determination of the total proton-proton cross-section at $\sqrt{s} = 7\un{TeV}$. This technique is based on the optical theorem and requires simultaneous measurements of the inelastic rate -- accomplished with the forward charged-particle telescopes T1 and T2 in the range $5.3 < |\eta| < 6.4$ -- and of the elastic rate by detecting the outcoming protons with Roman Pot detectors. The data presented here were collected in a dedicated run in 2011 with special beam optics ($\beta^{*} = 90\un{m}$) and Roman Pots approaching the beam close enough to register elastic events with squared four-momentum transfers $|t|$ as low as $5 \cdot 10^{-3}\,\un{GeV^{2}}$. The luminosity-independent results for the elastic, inelastic and total cross-sections are $\sigma_{\rm el} = (25.1\pm 1.1)\un{mb}$, $\sigma_{\rm inel} = (72.9\pm 1.5)\un{mb}$ and $\sigma_{\rm tot} = (98.0\pm 2.5)\un{mb}$, respectively. At the same time this method delivers the integrated luminosity, in agreement with measurements by CMS.\\
 %
 TOTEM also exploited two complementary ways of determining the total cross-section, both using the CMS luminosity measurement as an input and thus having very different systematic dependences. All results are in excellent agreement, making a first estimate for the $\rho$ parameter at $\sqrt{s} = 7\,$TeV possible: $|\rho| = 0.145 \pm 0.091$.
 }
@@ -157,7 +157,7 @@ TOTEM also exploited two complementary ways of determining the total cross-secti
 \begin{largetable}
 \hbox{}%
 \vskip-5mm
-\caption{Cross-section summary. The statistical uncertainties are negligible and therefore omitted. The systematic uncertainty contributions are grouped into several categories -- \emph{el} (from the elastic-scattering analysis), \emph{inel} (from the inelastic-scattering analysis), \emph{lumi} (from the $4\%$ uncertainty of the CMS luminosity measurement) and \emph{rho} (from the COMPETE preferred-model $\rho$ extrapolation uncertainty of $\pm 0.007$)
+\caption{Cross-section summary. The statistical uncertainties are negligible and therefore omitted. The systematic-uncertainty contributions are grouped into several categories -- \emph{el} (from the elastic-scattering analysis), \emph{inel} (from the inelastic-scattering analysis), \emph{lumi} (from the $4\%$ uncertainty of the CMS luminosity measurement) and \emph{rho} (from the COMPETE $\rho$ extrapolation, considering only the uncertainty of $\pm 0.007$ related to their preferred model)
 -- together forming the \emph{full} systematic uncertainty (components combined in quadrature, including their correlations).
 }
 \label{tab:cs}
@@ -168,7 +168,8 @@ TOTEM also exploited two complementary ways of determining the total cross-secti
 %&\multispan{17}\hrulefill\cr
 \hline
 &&\multispan2\hss elastic only: Eq.~(\ref{eq:m el}) \hss &\multispan5\hss elastic only: Eq.~(\ref{eq:m el})\hss &\multispan5\hss ${\cal L}_{\rm int}$-independent: Eq.~(\ref{eq:m lumi indep})\hss &\multispan5\hss $\rho$-independent: Eq.~(\ref{eq:m rho indep})\hss\cr
-&&\multispan2\hss June 2011, Ref.~\cite{epl96} \hss &\multispan5\hss October 2011, Ref.~\cite{P1}\hss &\multispan5\hss October 2011\hss &\multispan5\hss October 2011\hss\cr\hline
+&&\multispan2\hss June 2011\hss &\multispan5\hss October 2011\hss &\multispan5\hss October 2011\hss &\multispan5\hss October 2011\hss\cr
+&&\multispan2\hss published in~\cite{epl96} \hss &\multispan5\hss published in~\cite{P1}\hss &\multispan5\hss\hss &\multispan5\hss\hss\cr\hline
                     &           &              & full        &          &    el     & lumi      & rho       & full        &          &    el     & inel      & rho       & full        &          &    el     & inel      & lumi      & full      \cr\hline
 $\sigma_{\rm tot}$  & $\rm[mb]$ & $\qquad98.3$ & $\pm 2.8$   &   $98.6$ & $\pm 1.0$ & $\pm 2.0$ & $\pm 0.1$ & $\pm 2.2$   &   $98.0$ & $\pm 1.8$ & $\pm 1.7$ & $\pm 0.2$ & $\pm 2.5$   &   $99.1$ & $\pm 0.3$ & $\pm 1.7$ & $\pm 4.0$ & $\pm 4.3$ \cr
 $\sigma_{\rm inel}$ & $\rm[mb]$ & $\qquad73.5$ & $\pm 1.6$   &   $73.2$ & $\pm 0.8$ & $\pm 1.0$ & $\pm 0.1$ & $\pm 1.3$   &   $72.9$ & $\pm 1.1$ & $\pm 0.9$ & $\pm 0.1$ & $\pm 1.5$   &   $73.7$ &           & $\pm 1.7$ & $\pm 3.0$ & $\pm 3.4$ \cr
@@ -199,7 +200,7 @@ June	& TOTEM, Eq.~(\ref{eq:lumi jun el}) 	& $\S1.65 \pm 0.07$\cr
 \begin{figure*}
 \begin{center}
 \includegraphics{fig/sigma_tot_el_inel_cmp_big.pdf}
-%\vskip-5mm
+\vskip-5mm
 \caption{Left: the dependences of total, inelastic and elastic cross-sections on the scattering energy $\sqrt s$. The continuous black lines (lower for $\rm pp$, upper for $\rm \bar pp$) represent the best fits of the total cross-section data by the COMPETE collaboration \cite{compete}. The dashed line results from a fit of the elastic scattering data. The dash-dotted curves correspond to the inelastic cross-section and were obtained as the difference between the continuous and dashed fits.\hfil\break
 Right: measurements of total, inelastic and elastic cross-sections at $\sqrt s = 7\un{TeV}$. The circles represent the four TOTEM measurements summarized in Tab.~\ref{tab:cs} (weighted mean given by the dotted line), the other points show the measurements of other LHC collaborations.}
 \label{fig:cs}
@@ -221,22 +222,22 @@ Right: measurements of total, inelastic and elastic cross-sections at $\sqrt s =
 %--------------------------------------------------
 \section{Introduction}
 
-The TOTEM experiment has recently published \cite{epl96,P1} the differential cross-section for elastic proton-proton scattering as a function of the four-momentum transfer squared $t$. By extrapolation to $t=0$, the cross-section $\d\sigma_{\rm el}/\d t|_{0}$ at the optical point was determined. Integration of the differential distribution yields the elastic cross-section $\sigma_{\rm el}$. Applying the optical theorem, the total and the inelastic proton-proton cross-sections were derived with a weak dependence on the $\rho$ parameter (the ratio of the real to the imaginary part of the forward hadronic scattering amplitude):
+The TOTEM experiment has recently published \cite{epl96,P1} the differential cross-section for elastic proton-proton scattering as a function of the four-momentum transfer squared, $t$. By extrapolation to $t=0$, the cross-section $\d\sigma_{\rm el}/\d t|_{t=0}$ at the optical point was determined. Integration of the differential distribution yields the elastic cross-section, $\sigma_{\rm el}$. Applying the optical theorem, the total and the inelastic proton-proton cross-sections were derived with a weak dependence on the $\rho$ parameter (the ratio of the real to the imaginary part of the forward hadronic scattering amplitude):
 \begin{equation}
 \label{eq:m el}
-	\sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_0\ ,\qquad
+	\sigma_{\rm tot}^2 = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d\sigma_{\rm el}\over\d t\right|_{t=0}\ ,\qquad
 	\sigma_{\rm inel} = \sigma_{\rm tot} - \sigma_{\rm el}\ .
 \end{equation}
 %The results for the low-luminosity measurement \cite{epl96} and the higher-luminosity measurement \cite{P1} are summarized in Tab.~\ref{tab:cs}.
 These cross-sections are exclusively based on the measurement of the elastic scattering cross-section.
 
-Moreover, taking advantage of the two trigger-capable forward charged-particle telescopes T1 and T2, the inelastic cross-section was also directly measured \cite{P2} using the same data set as in \cite{P1}. A small Monte-Carlo correction ($\approx 3\%$) was applied to account for the invisible events in the very forward cone $|\eta| > 6.5$, mainly due to single diffraction. The cross-sections values with their systematic uncertainties are summarized in Tab.~\ref{tab:cs}.
+Moreover, taking advantage of the two trigger-capable forward charged-particle telescopes T1 and T2, the inelastic cross-section was also directly measured \cite{P2} using the same data set as in \cite{P1}. A small Monte-Carlo correction ($\approx 4\%$) was applied to account for the invisible events in the very forward direction $|\eta| > 6.5$, mainly due to low-mass single diffraction. The cross-sections values with their systematic uncertainties are summarized in Tab.~\ref{tab:cs}.
 
 The excellent agreement between the two completely different measurements of the inelastic cross-sections confirms the understanding of the systematic uncertainties and corrections applied in both methods. Taking maximum advantage of the two measurements by combining them in different ways allows extracting more information from the data, such as:
 \begin{itemize}
 \setlength{\topskip}{0pt}%
 \setlength{\itemsep}{0pt}%
-\item luminosity independent cross-sections,
+\item luminosity-independent cross-sections,
 \item luminosity determination,
 \item $\rho$-independent cross-sections,
 \item luminosity- and $\rho$-independent cross-section ratios,
@@ -254,9 +255,9 @@ For completeness, some of the results will be compared to those of the lower-lum
 Using the optical theorem, one can combine the elastic measurements from \cite{P1} and the inelastic measurements from \cite{P2} to derive the total cross-section without the knowledge of the luminosity:
 \begin{equation}
 \label{eq:m lumi indep}
-	\sigma_{\rm tot} = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, {\d N_{\rm el}/\d t|_0 \over N_{\rm el} + N_{\rm inel} }\ ,
+	\sigma_{\rm tot} = {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, {\d N_{\rm el}/\d t|_{t=0} \over N_{\rm el} + N_{\rm inel} }\ ,
 \end{equation}
-where $N_{\rm el}$ and $N_{\rm inel}$ stand for rates integrated over the run period. Taking $\rho = 0.141\pm 0.007$ from the COMPETE \cite{compete} preferred-model extrapolation yields the luminosity independent total cross-section, see Tab.~\ref{tab:cs}. Furthermore, using the measured ratio $N_{\rm el} / N_{\rm inel}$, also the elastic and inelastic cross-sections can be derived independently from the luminosity. These cross-sections are given in Tab.~\ref{tab:cs} with their uncertainty compositions.
+where $N_{\rm el}$ and $N_{\rm inel}$ stand for rates integrated over the run period. Taking $\rho = 0.141\pm 0.007$ from the COMPETE extrapolation \cite{compete} yields the luminosity-independent total cross-section, see Tab.~\ref{tab:cs}. Furthermore, using the measured ratio $N_{\rm el} / N_{\rm inel}$, also the elastic and inelastic cross-sections can be derived independently from the luminosity. These cross-sections are given in Tab.~\ref{tab:cs} with their uncertainty compositions.
 
 \TabCS
 \TabLumi
@@ -268,7 +269,7 @@ where $N_{\rm el}$ and $N_{\rm inel}$ stand for rates integrated over the run pe
 The optical theorem can also be applied in a complementary way such that the luminosity is determined:
 \begin{equation}
 \label{eq:lumi oct}
-{\cal L_{\rm int}} = {1 + \rho^2 \over 16\pi\, (\hbar c)^2}\, { (N_{\rm el} + N_{\rm inel})^2 \over \d N_{\rm el}/\d t|_0 }\ .
+{\cal L_{\rm int}} = {1 + \rho^2 \over 16\pi\, (\hbar c)^2}\, { (N_{\rm el} + N_{\rm inel})^2 \over \d N_{\rm el}/\d t|_{t=0} }\ .
 \end{equation}
 Thus, integrating the rates over the data-taking period during which the elastic \cite{P1} and inelastic \cite{P2} interactions have independently but simultaneously been measured, results in the integrated luminosity ${\cal L}_{\rm int}$. Using the above $\rho$ value, the luminosity determined by TOTEM for the October run is compared in Tab.~\ref{tab:lumi} to the one obtained by CMS in a completely different way. Both measurements agree well within their uncertainties.
 
@@ -276,7 +277,7 @@ Thus, integrating the rates over the data-taking period during which the elastic
 Once the cross-section of a process is known, it can be, in general, used for luminosity determination. In particular, knowing the total and elastic cross-sections, the integrated luminosity of the earlier June run \cite{epl96} has been calculated from the elastic scattering rates $\d N_{\rm el}/\d t|_{t=0}$ and $N_{\rm el}$, which are of course highly correlated:
 \begin{equation}
 \label{eq:lumi jun tot}
-{\cal L}_{\rm int}^{\rm June} =  {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d N_{\rm el}^{\rm June}\over\d t\right|_0\, {1\over \sigma_{\rm tot}^2}\ ,
+{\cal L}_{\rm int}^{\rm June} =  {16\pi\, (\hbar c)^2\over 1 + \rho^2}\, \left. \d N_{\rm el}^{\rm June}\over\d t\right|_{t=0}\, {1\over \sigma_{\rm tot}^2}\ ,
 \end{equation}
 \begin{equation}
 \label{eq:lumi jun el}
@@ -304,7 +305,7 @@ $$
 The elastic and inelastic measurements can be combined in order to determine $\rho^2$:
 \begin{equation}
 \label{eq:rho}
-\rho^2 = 16\pi\ (\hbar c)^2\ {\cal L_{\rm int}}\ {\d N_{\rm el}/\d t|_0\over (N_{\rm el} + N_{\rm inel})^2} - 1\ .
+\rho^2 = 16\pi\ (\hbar c)^2\ {\cal L_{\rm int}}\ {\d N_{\rm el}/\d t|_{t=0}\over (N_{\rm el} + N_{\rm inel})^2} - 1\ .
 \end{equation}
 Note that this is a direct measurement at $\sqrt s = 7\un{TeV}$, not an extrapolation from lower-energy measurements. Inserting the values from \cite{P1,P2} yields $\rho^2 = 0.009 \pm 0.056$ (mean and standard deviation). This estimate of $\rho^2$ cannot be translated into terms of $\rho$ in a straight-forward manner since an important part of the $\rho^2$ distribution extends to negative values, where square root is not defined. Instead, one can state that at $95\%$ confidence level $\rho^2 < 0.10$. This upper bound can be equally expressed as $\rho < 0.32$. Alternatively, one can pursue the Bayes' approach to estimate $|\rho|$. Taking a uniform prior $|\rho|$ distribution yields a posterior distribution with mean $0.145$ and standard deviation $0.091$.
 
@@ -342,6 +343,8 @@ We thank S.~Ostapchenko and R.~Ulrich for valuable discussions on the cosmic-ray
 
 
 %--------------------------------------------------
+\vskip-3mm
+\vskip0mm % to cancell the following unskip
 \begin{thebibliography}{00}
 
 \bibitem{epl96}
@@ -389,7 +392,9 @@ We thank S.~Ostapchenko and R.~Ulrich for valuable discussions on the cosmic-ray
 	%presented at {\it XX International Workshop on Deep-Inelastic Scattering and Related Subjects}, Bonn, Germany, 26-30 March 2012.
 	%arXiv:1205.3142
 	\Name{CMS collaboration}
-	CERN-PH-EP-2012-293
+	CMS-PAS-FWD-11-001 and
+	CMS-PAS-QCD-11-002
+	%CERN-PH-EP-2012-293
 
 \bibitem{auger}
 %title = {Measurement of the Proton-Air Cross Section at $\sqrt{s}\mathbf{=}57\text{\,}\text{\,}\mathrm{TeV}$ with the Pierre Auger Observatory},
