institutes to acknowledgements
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@6974 4525493e-7705-40b1-a816-d608a930855b

--- a/2012/3papers/elastic/elastic_cern.tex
+++ b/2012/3papers/elastic/elastic_cern.tex
@@ -60,7 +60,7 @@ F.~S.~Cafagna\Iref{5a},
 M.~Calicchio\IIref{5b}{5a},
 M.~G.~Catanesi\Iref{5a},
 C.~Covault\Iref{9},
-M.~Csan\'{a}d\Iref{4},
+M.~Csan\'{a}d\IAref{4}{e},
 T.~Cs\"{o}rg\H{o}\Iref{4},
 M.~Deile\Iref{8},
 K.~Eggert\Iref{9},
@@ -142,7 +142,7 @@ J.~Whitmore\Iref{10}
 \Anotfoot{b}{Ioffe Physical - Technical Institute of Russian Academy of Sciences.}
 \Anotfoot{c}{Warsaw University of Technology, Poland.}
 \Anotfoot{d}{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}
-\Anotfoot{e}{Department of Atomic Physics, ELTE University, Hungary.}
+\Anotfoot{e}{Department of Atomic Physics, E\"otv\"os University, Hungary.}
 \Anotfoot{f}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
 
 \newpage
@@ -636,7 +636,9 @@ the LHC machine coordinators for scheduling the dedicated fills.
 
 We are grateful to CMS for providing their luminosity measurements.
 
-
+This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus
+Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), the Academy of
+Finland, the OTKA grant NK 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
 
 %--------------------------------------------------
 \begin{thebibliography}{99}
