--- a/2012/3papers/elastic/elastic_epl.tex
+++ b/2012/3papers/elastic/elastic_epl.tex
@@ -6,10 +6,9 @@
 
 \author{
 The TOTEM Collaboration\\
-G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}\addtocounter{footnote}{-1}
-%\addtocounter{footnote}
+G.~Antchev\thanksInst{1}
 \and P.~Aspell\inst{8}
-\and I.~Atanassov\inst{8}\hspace{-0.15cm}\footnotemark
+\and I.~Atanassov\inst{8}\thanksInst{1}
 \and V.~Avati\inst{8}
 \and J.~Baechler\inst{8}
 \and V.~Berardi\inst{5b,5a}
@@ -23,67 +22,66 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
 \and M.~Calicchio\inst{5b,5a}
 \and M.~G.~Catanesi\inst{5a}
 \and C.~Covault\inst{9}
-\and M.~Csan\'{a}d\inst{4}
+\and M.~Csan\'{a}d\inst{4}\thanksInst{5}
 \and T.~Cs\"{o}rg\H{o}\inst{4}
 \and M.~Deile\inst{8}
- \and K.~Eggert\inst{9}
- \and V.~Eremin\thanks{Ioffe Physical - Technical Institute of Russian Academy of Sciences.}
- \and R.~Ferretti\inst{6a,6b}
- \and F.~Ferro\inst{6a}
- \and A. Fiergolski\thanks{Warsaw University of Technology, Poland.}
- \and F.~Garcia\inst{3a}
- \and S.~Giani\inst{8}
- \and V.~Greco\inst{7b,8}
- \and L.~Grzanka\inst{8}\hspace{-0.15cm}\thanks{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}\addtocounter{footnote}{-2}
- \and J.~Heino\inst{3a}
- \and T.~Hilden\inst{3a,3b}
- \and R.~A.~Intonti\inst{5a}
- \and J.~Ka\v{s}par\inst{1a,8}
- \and J.~Kopal\inst{1a,8}
- \and V.~Kundr\'{a}t\inst{1a}
- \and K.~Kurvinen\inst{3a}
- \and S.~Lami\inst{7a}
- \and G.~Latino\inst{7b}
- \and R.~Lauhakangas\inst{3a}
- \and  T.~Leszko\footnotemark
- %\thanks{Warsaw University of Technology, Poland}
- \and E.~Lippmaa\inst{2}
- \and M.~Lokaj\'{\i}\v{c}ek\inst{1a}
- \and M.~Lo~Vetere\inst{6b,6a}
- \and F.~Lucas~Rodr\'{i}guez\inst{8}
- \and M.~Macr\'{\i}\inst{6a}
- \and T.~M\"aki\inst{3a}
- \and A.~Mercadante\inst{5b,5a}
- \and N.~Minafra\inst{8} 
- \and S.~Minutoli\inst{6a}\addtocounter{footnote}{1}
- \and F.~Nemes\inst{4}\hspace{-0.15cm}\thanks{Department of Atomic Physics, ELTE University, Hungary.}
- \and H.~Niewiadomski\inst{8}
- \and E.~Oliveri\inst{7b}
- \and F.~Oljemark\inst{3a,3b}
- \and R.~Orava\inst{3a,3b}
- \and M.~Oriunno\inst{8}\hspace{-0.15cm}\thanks{SLAC National Accelerator Laboratory, Stanford CA, USA.}
- \and K.~\"{O}sterberg\inst{3a,3b}
- \and P.~Palazzi\inst{7b}
- \and J.~Proch\'{a}zka\inst{1a}
- \and M.~Quinto\inst{5a}
- \and E.~Radermacher\inst{8}
- \and E.~Radicioni\inst{5a}
- \and F.~Ravotti\inst{8}
- \and E.~Robutti\inst{6a}
- \and L.~Ropelewski\inst{8}
- \and G.~Ruggiero\inst{8}
- \and H.~Saarikko\inst{3a,3b}
- \and A.~Santroni\inst{6b,6a}
- \and A.~Scribano\inst{7b}
- \and J.~Smajek\inst{8}
- \and W.~Snoeys\inst{8}
- \and J.~Sziklai\inst{4}
- \and C.~Taylor\inst{9}
- \and N.~Turini\inst{7b}
- \and V.~Vacek\inst{1b}
- \and M.~V\'itek\inst{1b}
- \and J.~Welti\inst{3a,3b}
- \and J.~Whitmore\inst{10}
+\and K.~Eggert\inst{9}
+\and V.~Eremin\thanksInst{2}
+\and R.~Ferretti\inst{6a,6b}
+\and F.~Ferro\inst{6a}
+\and A. Fiergolski\thanksInst{3}
+\and F.~Garcia\inst{3a}
+\and S.~Giani\inst{8}
+\and V.~Greco\inst{7b,8}
+\and L.~Grzanka\inst{8}\thanksInst{4}
+\and J.~Heino\inst{3a}
+\and T.~Hilden\inst{3a,3b}
+\and R.~A.~Intonti\inst{5a}
+\and J.~Ka\v{s}par\inst{1a,8}
+\and J.~Kopal\inst{1a,8}
+\and V.~Kundr\'{a}t\inst{1a}
+\and K.~Kurvinen\inst{3a}
+\and S.~Lami\inst{7a}
+\and G.~Latino\inst{7b}
+\and R.~Lauhakangas\inst{3a}
+\and T.~Leszko\thanksInst{3}
+\and E.~Lippmaa\inst{2}
+\and M.~Lokaj\'{\i}\v{c}ek\inst{1a}
+\and M.~Lo~Vetere\inst{6b,6a}
+\and F.~Lucas~Rodr\'{i}guez\inst{8}
+\and M.~Macr\'{\i}\inst{6a}
+\and T.~M\"aki\inst{3a}
+\and A.~Mercadante\inst{5b,5a}
+\and N.~Minafra\inst{8} 
+\and S.~Minutoli\inst{6a}
+\and F.~Nemes\inst{4}\thanksInst{5}
+\and H.~Niewiadomski\inst{8}
+\and E.~Oliveri\inst{7b}
+\and F.~Oljemark\inst{3a,3b}
+\and R.~Orava\inst{3a,3b}
+\and M.~Oriunno\inst{8}\thanksInst{6}
+\and K.~\"{O}sterberg\inst{3a,3b}
+\and P.~Palazzi\inst{7b}
+\and J.~Proch\'{a}zka\inst{1a}
+\and M.~Quinto\inst{5a}
+\and E.~Radermacher\inst{8}
+\and E.~Radicioni\inst{5a}
+\and F.~Ravotti\inst{8}
+\and E.~Robutti\inst{6a}
+\and L.~Ropelewski\inst{8}
+\and G.~Ruggiero\inst{8}
+\and H.~Saarikko\inst{3a,3b}
+\and A.~Santroni\inst{6b,6a}
+\and A.~Scribano\inst{7b}
+\and J.~Smajek\inst{8}
+\and W.~Snoeys\inst{8}
+\and J.~Sziklai\inst{4}
+\and C.~Taylor\inst{9}
+\and N.~Turini\inst{7b}
+\and V.~Vacek\inst{1b}
+\and M.~V\'itek\inst{1b}
+\and J.~Welti\inst{3a,3b}
+\and J.~Whitmore\inst{10}
 }
 
 \shortauthor{The TOTEM Collaboration (G.~Antchev \etal)}
@@ -104,6 +102,13 @@ G.~Antchev\thanks{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, 
 \inst{8} {CERN, Geneva, Switzerland.}\\
 \inst{9} {Case Western Reserve University, Dept. of Physics, Cleveland, OH, USA.}\\
 \inst{10}{Penn State University, Dept.~of Physics, University Park, PA, USA.}\\
+%
+\thanksRef{1}{INRNE-BAS, Institute for Nuclear Research and Nuclear Energy, Bulgarian Academy of Sciences, Sofia, Bulgaria.}
+\thanksRef{2}{Ioffe Physical -- Technical Institute of Russian Academy of Sciences.}
+\thanksRef{3}{Warsaw University of Technology, Poland.}
+\thanksRef{4}{Institute of Nuclear Physics, Polish Academy of Science, Cracow, Poland.}
+\thanksRef{5}{Department of Atomic Physics, E\"otv\"os University, Hungary.}
+\thanksRef{6}{SLAC National Accelerator Laboratory, Stanford CA, USA.}
 }
 
 
@@ -127,6 +132,16 @@ For model comparisons the $t$-distributions are tabulated including the large $|
 \def\S{\hbox to\wd123{\hss}}
 \setbox124\hbox{\small$_{0}$}
 \def\s{\hbox to\wd124{\hss}}
+
+\def\thanksInst#1{\unskip\footnotemark[#1]}
+
+\bgroup
+\catcode`\@=11
+
+\gdef\thanksRef#1#2{%
+    \protected@xdef\@thanks{\@thanks\protect\footnotetext[#1]{#2}}%
+}
+\egroup
 
 
 \begin{document}
@@ -607,7 +622,9 @@ The above measurements will be repeated this year at the energy of $\sqrt s = 8\
 
 
 %--------------------------------------------------
+%\vskip-4mm
 \acknowledgments
+%\vskip-4mm
 
 We are indebted to the beam optics development team
 %({\sc A.~Verdier} in the initial phase, {\sc H.~Burkhardt}, {\sc G.~M\" uller}, {\sc S.~Redaelli}, {\sc J.~Wenninger}, {\sc S.~M.~White})
@@ -617,8 +634,14 @@ the LHC machine coordinators for scheduling the dedicated fills.
 
 We are grateful to CMS for providing their luminosity measurements.
 
+This work was supported by the institutions listed on the front page and partially also by NSF (US), the Magnus
+Ehrnrooth foundation (Finland), the Waldemar von Frenckell foundation (Finland), the Academy of
+Finland, the OTKA grant NK 73143 (Hungary) and the NKTH-OTKA grant 74458 (Hungary).
+
 
 %--------------------------------------------------
+%\vskip-4mm
+%\vskip-0mm
 \begin{thebibliography}{99}
 
 \bibitem{epl95}
